{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 395,
  "lineage": "1ebe5639-a311-5e77-1e2a-5b8213d54a40",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073a16bd262bd7c0b",
            "arn": "arn:aws:ec2:us-east-1:194722415730:elastic-ip/eipalloc-073a16bd262bd7c0b",
            "association_id": "eipassoc-0d44a0fcf824493b1",
            "domain": "vpc",
            "id": "eipalloc-073a16bd262bd7c0b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09d473920e2bceb99",
            "private_dns": "ip-10-0-0-23.ec2.internal",
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-3-89-168-37.compute-1.amazonaws.com",
            "public_ip": "3.89.168.37",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:internet-gateway/igw-09050d97e7bdc2b27",
            "id": "igw-09050d97e7bdc2b27",
            "owner_id": "194722415730",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073a16bd262bd7c0b",
            "association_id": "eipassoc-0d44a0fcf824493b1",
            "connectivity_type": "public",
            "id": "nat-07ab591172410ac74",
            "network_interface_id": "eni-09d473920e2bceb99",
            "private_ip": "10.0.0.23",
            "public_ip": "3.89.168.37",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa17df37458807e3",
            "tags": {
              "Name": "eks-nat-1"
            },
            "tags_all": {
              "Name": "eks-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:route-table/rtb-0f68621fd8eab6847",
            "id": "rtb-0f68621fd8eab6847",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ab591172410ac74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-1"
            },
            "tags_all": {
              "Name": "eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "rtb-0f68621fd8eab6847",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:route-table/rtb-0247c6e4599239ea1",
            "id": "rtb-0247c6e4599239ea1",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09050d97e7bdc2b27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "rtb-0247c6e4599239ea1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4dfb0045bd60842",
            "region": "us-east-1",
            "route_table_id": "rtb-0f68621fd8eab6847",
            "subnet_id": "subnet-08b360714aba31926"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0778f0e25085d3e77",
            "region": "us-east-1",
            "route_table_id": "rtb-0f68621fd8eab6847",
            "subnet_id": "subnet-00131c049686189b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d2156e64b2ef751",
            "region": "us-east-1",
            "route_table_id": "rtb-0f68621fd8eab6847",
            "subnet_id": "subnet-0f28940fffeec703a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cadd85c39bade5cf",
            "region": "us-east-1",
            "route_table_id": "rtb-0247c6e4599239ea1",
            "subnet_id": "subnet-0fa17df37458807e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028a29e7f69236cb3",
            "region": "us-east-1",
            "route_table_id": "rtb-0247c6e4599239ea1",
            "subnet_id": "subnet-0823b0a7c55407817"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095605a5b084a5d13",
            "region": "us-east-1",
            "route_table_id": "rtb-0247c6e4599239ea1",
            "subnet_id": "subnet-004381ecfcea83fc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-08b360714aba31926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b360714aba31926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-08b360714aba31926",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-00131c049686189b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00131c049686189b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-00131c049686189b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-0f28940fffeec703a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f28940fffeec703a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-0f28940fffeec703a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-0fa17df37458807e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa17df37458807e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-0fa17df37458807e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-0823b0a7c55407817",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0823b0a7c55407817",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-0823b0a7c55407817",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:subnet/subnet-004381ecfcea83fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004381ecfcea83fc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0820caa193c28303d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722415730",
            "id": "subnet-004381ecfcea83fc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194722415730:vpc/vpc-0820caa193c28303d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0922dfcc88ab1e022",
            "default_route_table_id": "rtb-062ae1f312317c46d",
            "default_security_group_id": "sg-007ef250cb0c1fd75",
            "dhcp_options_id": "dopt-059c8fb4e00b54737",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0820caa193c28303d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062ae1f312317c46d",
            "owner_id": "194722415730",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}